@startuml

package "pkg 2.Design" {

  class Usuario {
    - id : Long
    - email : String
    - senha : String
    - nome : String
    - assessmentCompleted : boolean
  }

  class Evento {
    - id : Long
    - type : String
    - intensity : String
    - trigger : String
    - notes : String
    - occurredAt : LocalDateTime
    - createdAt : LocalDateTime
  }

  Usuario "1" -- "0..*" Evento : registra >

}

class EventRequestDTO {
  - type : String
  - intensity : String
  - trigger : String
  - notes : String
  - occurredAt : LocalDateTime
}

class EventResponseDTO {
  - id : Long
  - type : String
  - intensity : String
  - trigger : String
  - notes : String
  - occurredAt : LocalDateTime
  - createdAt : LocalDateTime
  + from(event) : EventResponseDTO
}

class EventController {
  + register(userDetails, dto) : EventResponseDTO
  + list(userDetails) : List<EventResponseDTO>
}

class EventService {
  + register(email, dto) : EventResponseDTO
  + listByUser(email) : List<EventResponseDTO>
}

class EventRepository {
  + findByUserIdOrderByOccurredAtDesc(userId) : List<Event>
  + save(event) : Event
}

EventController --> EventService
EventController ..> EventRequestDTO
EventController ..> EventResponseDTO
EventService --> EventRepository
EventService --> UserRepository
EventRepository ..> Evento

class UserRepository {
  + findByEmailIgnoreCase(email) : Optional<User>
}

@enduml
